# cookie-stand-python

./: Dockerfile  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
cookie_stand_python/: asgi.py  settings.py  urls.py  wsgi.py
salmon_cookies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
salmon_cookies/migrations/: 0001_initial.py  0002_auto_20201017_2218.py  0003_auto_20201017_2225.py  0004_auto_20201017_2226.py  0005_auto_20201017_2229.py
